src/parser.output
Terminals unused in grammar

   INTEGER
   STRING
   ETOK
   AND
   OR
   GT
   LT
   GE
   LE
   EQ
   NE


Grammar

    0 $accept: program $end

    1 program: DB decl_block CB code_block

    2 decl_block: '{' declaration_list '}'

    3 declaration_list: declaration
    4                 | declaration declaration_list

    5 declaration: DATATYPE declare ';'

    6 code_block: '{' statement_list '}'

    7 statement_list: statement
    8               | statement statement_list
    9               | label_statement statement_list

   10 declare: declare ',' IDENTIFIER
   11        | declare ',' ARRAY
   12        | ARRAY
   13        | IDENTIFIER
   14        | IDENTIFIER '=' NUMBER
   15        | IDENTIFIER '=' TEXT

   16 label_statement: LABEL ':' statement

   17 statement: IF boolexpr code_block
   18          | IF boolexpr code_block ELSE code_block
   19          | WHILE boolexpr code_block
   20          | FOR IDENTIFIER '=' NUMBER ',' NUMBER code_block
   21          | FOR IDENTIFIER '=' NUMBER ',' NUMBER ',' NUMBER code_block
   22          | GOTO LABEL IF boolexpr ';'
   23          | GOT LABEL ';'
   24          | IDENTIFIER '=' expr ';'
   25          | IDENTIFIER '=' TEXT ';'
   26          | ARRAY '=' expr ';'
   27          | PRINT element ';'
   28          | PRINTLN element ';'
   29          | READ IDENTIFIER ';'

   30 expr: expr '+' expr
   31     | expr '-' expr
   32     | expr '*' expr
   33     | NUMBER
   34     | IDENTIFIER
   35     | ARRAY

   36 boolexpr: boolexpr LOGOP boolexpr
   37         | relexpr

   38 relexpr: NUMBER RELOP NUMBER
   39        | NUMBER RELOP IDENTIFIER
   40        | IDENTIFIER RELOP NUMBER
   41        | IDENTIFIER RELOP IDENTIFIER

   42 element: element ',' NUMBER
   43        | element ',' IDENTIFIER
   44        | element ',' TEXT
   45        | NUMBER
   46        | IDENTIFIER
   47        | TEXT


Terminals, with rules where they appear

$end (0) 0
'*' (42) 32
'+' (43) 30
',' (44) 10 11 20 21 42 43 44
'-' (45) 31
':' (58) 16
';' (59) 5 22 23 24 25 26 27 28 29
'=' (61) 14 15 20 21 24 25 26
'{' (123) 2 6
'}' (125) 2 6
error (256)
DB (258) 1
CB (259) 1
NUMBER (260) 14 20 21 33 38 39 40 42 45
IDENTIFIER (261) 10 13 14 15 20 21 24 25 29 34 39 40 41 43 46
TEXT (262) 15 25 44 47
INTEGER (263)
STRING (264)
LABEL (265) 16 22 23
DATATYPE (266) 5
ARRAY (267) 11 12 26 35
ETOK (268)
LOGOP (269) 36
AND (270)
OR (271)
IF (272) 17 18 22
WHILE (273) 19
FOR (274) 20 21
ELSE (275) 18
GOTO (276) 22
GOT (277) 23
PRINT (278) 27
PRINTLN (279) 28
READ (280) 29
RELOP (281) 38 39 40 41
GT (282)
LT (283)
GE (284)
LE (285)
EQ (286)
NE (287)


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
program (43)
    on left: 1, on right: 0
decl_block (44)
    on left: 2, on right: 1
declaration_list (45)
    on left: 3 4, on right: 2 4
declaration (46)
    on left: 5, on right: 3 4
code_block (47)
    on left: 6, on right: 1 17 18 19 20 21
statement_list (48)
    on left: 7 8 9, on right: 6 8 9
declare (49)
    on left: 10 11 12 13 14 15, on right: 5 10 11
label_statement (50)
    on left: 16, on right: 9
statement (51)
    on left: 17 18 19 20 21 22 23 24 25 26 27 28 29, on right: 7 8
    16
expr (52)
    on left: 30 31 32 33 34 35, on right: 24 26 30 31 32
boolexpr (53)
    on left: 36 37, on right: 17 18 19 22 36
relexpr (54)
    on left: 38 39 40 41, on right: 37
element (55)
    on left: 42 43 44 45 46 47, on right: 27 28 42 43 44


State 0

    0 $accept: . program $end

    DB  shift, and go to state 1

    program  go to state 2


State 1

    1 program: DB . decl_block CB code_block

    '{'  shift, and go to state 3

    decl_block  go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    2 decl_block: '{' . declaration_list '}'

    DATATYPE  shift, and go to state 6

    declaration_list  go to state 7
    declaration       go to state 8


State 4

    1 program: DB decl_block . CB code_block

    CB  shift, and go to state 9


State 5

    0 $accept: program $end .

    $default  accept


State 6

    5 declaration: DATATYPE . declare ';'

    IDENTIFIER  shift, and go to state 10
    ARRAY       shift, and go to state 11

    declare  go to state 12


State 7

    2 decl_block: '{' declaration_list . '}'

    '}'  shift, and go to state 13


State 8

    3 declaration_list: declaration .
    4                 | declaration . declaration_list

    DATATYPE  shift, and go to state 6

    $default  reduce using rule 3 (declaration_list)

    declaration_list  go to state 14
    declaration       go to state 8


State 9

    1 program: DB decl_block CB . code_block

    '{'  shift, and go to state 15

    code_block  go to state 16


State 10

   13 declare: IDENTIFIER .
   14        | IDENTIFIER . '=' NUMBER
   15        | IDENTIFIER . '=' TEXT

    '='  shift, and go to state 17

    $default  reduce using rule 13 (declare)


State 11

   12 declare: ARRAY .

    $default  reduce using rule 12 (declare)


State 12

    5 declaration: DATATYPE declare . ';'
   10 declare: declare . ',' IDENTIFIER
   11        | declare . ',' ARRAY

    ';'  shift, and go to state 18
    ','  shift, and go to state 19


State 13

    2 decl_block: '{' declaration_list '}' .

    $default  reduce using rule 2 (decl_block)


State 14

    4 declaration_list: declaration declaration_list .

    $default  reduce using rule 4 (declaration_list)


State 15

    6 code_block: '{' . statement_list '}'

    IDENTIFIER  shift, and go to state 20
    LABEL       shift, and go to state 21
    ARRAY       shift, and go to state 22
    IF          shift, and go to state 23
    WHILE       shift, and go to state 24
    FOR         shift, and go to state 25
    GOTO        shift, and go to state 26
    GOT         shift, and go to state 27
    PRINT       shift, and go to state 28
    PRINTLN     shift, and go to state 29
    READ        shift, and go to state 30

    statement_list   go to state 31
    label_statement  go to state 32
    statement        go to state 33


State 16

    1 program: DB decl_block CB code_block .

    $default  reduce using rule 1 (program)


State 17

   14 declare: IDENTIFIER '=' . NUMBER
   15        | IDENTIFIER '=' . TEXT

    NUMBER  shift, and go to state 34
    TEXT    shift, and go to state 35


State 18

    5 declaration: DATATYPE declare ';' .

    $default  reduce using rule 5 (declaration)


State 19

   10 declare: declare ',' . IDENTIFIER
   11        | declare ',' . ARRAY

    IDENTIFIER  shift, and go to state 36
    ARRAY       shift, and go to state 37


State 20

   24 statement: IDENTIFIER . '=' expr ';'
   25          | IDENTIFIER . '=' TEXT ';'

    '='  shift, and go to state 38


State 21

   16 label_statement: LABEL . ':' statement

    ':'  shift, and go to state 39


State 22

   26 statement: ARRAY . '=' expr ';'

    '='  shift, and go to state 40


State 23

   17 statement: IF . boolexpr code_block
   18          | IF . boolexpr code_block ELSE code_block

    NUMBER      shift, and go to state 41
    IDENTIFIER  shift, and go to state 42

    boolexpr  go to state 43
    relexpr   go to state 44


State 24

   19 statement: WHILE . boolexpr code_block

    NUMBER      shift, and go to state 41
    IDENTIFIER  shift, and go to state 42

    boolexpr  go to state 45
    relexpr   go to state 44


State 25

   20 statement: FOR . IDENTIFIER '=' NUMBER ',' NUMBER code_block
   21          | FOR . IDENTIFIER '=' NUMBER ',' NUMBER ',' NUMBER code_block

    IDENTIFIER  shift, and go to state 46


State 26

   22 statement: GOTO . LABEL IF boolexpr ';'

    LABEL  shift, and go to state 47


State 27

   23 statement: GOT . LABEL ';'

    LABEL  shift, and go to state 48


State 28

   27 statement: PRINT . element ';'

    NUMBER      shift, and go to state 49
    IDENTIFIER  shift, and go to state 50
    TEXT        shift, and go to state 51

    element  go to state 52


State 29

   28 statement: PRINTLN . element ';'

    NUMBER      shift, and go to state 49
    IDENTIFIER  shift, and go to state 50
    TEXT        shift, and go to state 51

    element  go to state 53


State 30

   29 statement: READ . IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 54


State 31

    6 code_block: '{' statement_list . '}'

    '}'  shift, and go to state 55


State 32

    9 statement_list: label_statement . statement_list

    IDENTIFIER  shift, and go to state 20
    LABEL       shift, and go to state 21
    ARRAY       shift, and go to state 22
    IF          shift, and go to state 23
    WHILE       shift, and go to state 24
    FOR         shift, and go to state 25
    GOTO        shift, and go to state 26
    GOT         shift, and go to state 27
    PRINT       shift, and go to state 28
    PRINTLN     shift, and go to state 29
    READ        shift, and go to state 30

    statement_list   go to state 56
    label_statement  go to state 32
    statement        go to state 33


State 33

    7 statement_list: statement .
    8               | statement . statement_list

    IDENTIFIER  shift, and go to state 20
    LABEL       shift, and go to state 21
    ARRAY       shift, and go to state 22
    IF          shift, and go to state 23
    WHILE       shift, and go to state 24
    FOR         shift, and go to state 25
    GOTO        shift, and go to state 26
    GOT         shift, and go to state 27
    PRINT       shift, and go to state 28
    PRINTLN     shift, and go to state 29
    READ        shift, and go to state 30

    $default  reduce using rule 7 (statement_list)

    statement_list   go to state 57
    label_statement  go to state 32
    statement        go to state 33


State 34

   14 declare: IDENTIFIER '=' NUMBER .

    $default  reduce using rule 14 (declare)


State 35

   15 declare: IDENTIFIER '=' TEXT .

    $default  reduce using rule 15 (declare)


State 36

   10 declare: declare ',' IDENTIFIER .

    $default  reduce using rule 10 (declare)


State 37

   11 declare: declare ',' ARRAY .

    $default  reduce using rule 11 (declare)


State 38

   24 statement: IDENTIFIER '=' . expr ';'
   25          | IDENTIFIER '=' . TEXT ';'

    NUMBER      shift, and go to state 58
    IDENTIFIER  shift, and go to state 59
    TEXT        shift, and go to state 60
    ARRAY       shift, and go to state 61

    expr  go to state 62


State 39

   16 label_statement: LABEL ':' . statement

    IDENTIFIER  shift, and go to state 20
    ARRAY       shift, and go to state 22
    IF          shift, and go to state 23
    WHILE       shift, and go to state 24
    FOR         shift, and go to state 25
    GOTO        shift, and go to state 26
    GOT         shift, and go to state 27
    PRINT       shift, and go to state 28
    PRINTLN     shift, and go to state 29
    READ        shift, and go to state 30

    statement  go to state 63


State 40

   26 statement: ARRAY '=' . expr ';'

    NUMBER      shift, and go to state 58
    IDENTIFIER  shift, and go to state 59
    ARRAY       shift, and go to state 61

    expr  go to state 64


State 41

   38 relexpr: NUMBER . RELOP NUMBER
   39        | NUMBER . RELOP IDENTIFIER

    RELOP  shift, and go to state 65


State 42

   40 relexpr: IDENTIFIER . RELOP NUMBER
   41        | IDENTIFIER . RELOP IDENTIFIER

    RELOP  shift, and go to state 66


State 43

   17 statement: IF boolexpr . code_block
   18          | IF boolexpr . code_block ELSE code_block
   36 boolexpr: boolexpr . LOGOP boolexpr

    LOGOP  shift, and go to state 67
    '{'    shift, and go to state 15

    code_block  go to state 68


State 44

   37 boolexpr: relexpr .

    $default  reduce using rule 37 (boolexpr)


State 45

   19 statement: WHILE boolexpr . code_block
   36 boolexpr: boolexpr . LOGOP boolexpr

    LOGOP  shift, and go to state 67
    '{'    shift, and go to state 15

    code_block  go to state 69


State 46

   20 statement: FOR IDENTIFIER . '=' NUMBER ',' NUMBER code_block
   21          | FOR IDENTIFIER . '=' NUMBER ',' NUMBER ',' NUMBER code_block

    '='  shift, and go to state 70


State 47

   22 statement: GOTO LABEL . IF boolexpr ';'

    IF  shift, and go to state 71


State 48

   23 statement: GOT LABEL . ';'

    ';'  shift, and go to state 72


State 49

   45 element: NUMBER .

    $default  reduce using rule 45 (element)


State 50

   46 element: IDENTIFIER .

    $default  reduce using rule 46 (element)


State 51

   47 element: TEXT .

    $default  reduce using rule 47 (element)


State 52

   27 statement: PRINT element . ';'
   42 element: element . ',' NUMBER
   43        | element . ',' IDENTIFIER
   44        | element . ',' TEXT

    ';'  shift, and go to state 73
    ','  shift, and go to state 74


State 53

   28 statement: PRINTLN element . ';'
   42 element: element . ',' NUMBER
   43        | element . ',' IDENTIFIER
   44        | element . ',' TEXT

    ';'  shift, and go to state 75
    ','  shift, and go to state 74


State 54

   29 statement: READ IDENTIFIER . ';'

    ';'  shift, and go to state 76


State 55

    6 code_block: '{' statement_list '}' .

    $default  reduce using rule 6 (code_block)


State 56

    9 statement_list: label_statement statement_list .

    $default  reduce using rule 9 (statement_list)


State 57

    8 statement_list: statement statement_list .

    $default  reduce using rule 8 (statement_list)


State 58

   33 expr: NUMBER .

    $default  reduce using rule 33 (expr)


State 59

   34 expr: IDENTIFIER .

    $default  reduce using rule 34 (expr)


State 60

   25 statement: IDENTIFIER '=' TEXT . ';'

    ';'  shift, and go to state 77


State 61

   35 expr: ARRAY .

    $default  reduce using rule 35 (expr)


State 62

   24 statement: IDENTIFIER '=' expr . ';'
   30 expr: expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    ';'  shift, and go to state 81


State 63

   16 label_statement: LABEL ':' statement .

    $default  reduce using rule 16 (label_statement)


State 64

   26 statement: ARRAY '=' expr . ';'
   30 expr: expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    ';'  shift, and go to state 82


State 65

   38 relexpr: NUMBER RELOP . NUMBER
   39        | NUMBER RELOP . IDENTIFIER

    NUMBER      shift, and go to state 83
    IDENTIFIER  shift, and go to state 84


State 66

   40 relexpr: IDENTIFIER RELOP . NUMBER
   41        | IDENTIFIER RELOP . IDENTIFIER

    NUMBER      shift, and go to state 85
    IDENTIFIER  shift, and go to state 86


State 67

   36 boolexpr: boolexpr LOGOP . boolexpr

    NUMBER      shift, and go to state 41
    IDENTIFIER  shift, and go to state 42

    boolexpr  go to state 87
    relexpr   go to state 44


State 68

   17 statement: IF boolexpr code_block .
   18          | IF boolexpr code_block . ELSE code_block

    ELSE  shift, and go to state 88

    $default  reduce using rule 17 (statement)


State 69

   19 statement: WHILE boolexpr code_block .

    $default  reduce using rule 19 (statement)


State 70

   20 statement: FOR IDENTIFIER '=' . NUMBER ',' NUMBER code_block
   21          | FOR IDENTIFIER '=' . NUMBER ',' NUMBER ',' NUMBER code_block

    NUMBER  shift, and go to state 89


State 71

   22 statement: GOTO LABEL IF . boolexpr ';'

    NUMBER      shift, and go to state 41
    IDENTIFIER  shift, and go to state 42

    boolexpr  go to state 90
    relexpr   go to state 44


State 72

   23 statement: GOT LABEL ';' .

    $default  reduce using rule 23 (statement)


State 73

   27 statement: PRINT element ';' .

    $default  reduce using rule 27 (statement)


State 74

   42 element: element ',' . NUMBER
   43        | element ',' . IDENTIFIER
   44        | element ',' . TEXT

    NUMBER      shift, and go to state 91
    IDENTIFIER  shift, and go to state 92
    TEXT        shift, and go to state 93


State 75

   28 statement: PRINTLN element ';' .

    $default  reduce using rule 28 (statement)


State 76

   29 statement: READ IDENTIFIER ';' .

    $default  reduce using rule 29 (statement)


State 77

   25 statement: IDENTIFIER '=' TEXT ';' .

    $default  reduce using rule 25 (statement)


State 78

   30 expr: expr '+' . expr

    NUMBER      shift, and go to state 58
    IDENTIFIER  shift, and go to state 59
    ARRAY       shift, and go to state 61

    expr  go to state 94


State 79

   31 expr: expr '-' . expr

    NUMBER      shift, and go to state 58
    IDENTIFIER  shift, and go to state 59
    ARRAY       shift, and go to state 61

    expr  go to state 95


State 80

   32 expr: expr '*' . expr

    NUMBER      shift, and go to state 58
    IDENTIFIER  shift, and go to state 59
    ARRAY       shift, and go to state 61

    expr  go to state 96


State 81

   24 statement: IDENTIFIER '=' expr ';' .

    $default  reduce using rule 24 (statement)


State 82

   26 statement: ARRAY '=' expr ';' .

    $default  reduce using rule 26 (statement)


State 83

   38 relexpr: NUMBER RELOP NUMBER .

    $default  reduce using rule 38 (relexpr)


State 84

   39 relexpr: NUMBER RELOP IDENTIFIER .

    $default  reduce using rule 39 (relexpr)


State 85

   40 relexpr: IDENTIFIER RELOP NUMBER .

    $default  reduce using rule 40 (relexpr)


State 86

   41 relexpr: IDENTIFIER RELOP IDENTIFIER .

    $default  reduce using rule 41 (relexpr)


State 87

   36 boolexpr: boolexpr . LOGOP boolexpr
   36         | boolexpr LOGOP boolexpr .

    $default  reduce using rule 36 (boolexpr)


State 88

   18 statement: IF boolexpr code_block ELSE . code_block

    '{'  shift, and go to state 15

    code_block  go to state 97


State 89

   20 statement: FOR IDENTIFIER '=' NUMBER . ',' NUMBER code_block
   21          | FOR IDENTIFIER '=' NUMBER . ',' NUMBER ',' NUMBER code_block

    ','  shift, and go to state 98


State 90

   22 statement: GOTO LABEL IF boolexpr . ';'
   36 boolexpr: boolexpr . LOGOP boolexpr

    LOGOP  shift, and go to state 67
    ';'    shift, and go to state 99


State 91

   42 element: element ',' NUMBER .

    $default  reduce using rule 42 (element)


State 92

   43 element: element ',' IDENTIFIER .

    $default  reduce using rule 43 (element)


State 93

   44 element: element ',' TEXT .

    $default  reduce using rule 44 (element)


State 94

   30 expr: expr . '+' expr
   30     | expr '+' expr .
   31     | expr . '-' expr
   32     | expr . '*' expr

    '*'  shift, and go to state 80

    $default  reduce using rule 30 (expr)


State 95

   30 expr: expr . '+' expr
   31     | expr . '-' expr
   31     | expr '-' expr .
   32     | expr . '*' expr

    '*'  shift, and go to state 80

    $default  reduce using rule 31 (expr)


State 96

   30 expr: expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   32     | expr '*' expr .

    $default  reduce using rule 32 (expr)


State 97

   18 statement: IF boolexpr code_block ELSE code_block .

    $default  reduce using rule 18 (statement)


State 98

   20 statement: FOR IDENTIFIER '=' NUMBER ',' . NUMBER code_block
   21          | FOR IDENTIFIER '=' NUMBER ',' . NUMBER ',' NUMBER code_block

    NUMBER  shift, and go to state 100


State 99

   22 statement: GOTO LABEL IF boolexpr ';' .

    $default  reduce using rule 22 (statement)


State 100

   20 statement: FOR IDENTIFIER '=' NUMBER ',' NUMBER . code_block
   21          | FOR IDENTIFIER '=' NUMBER ',' NUMBER . ',' NUMBER code_block

    '{'  shift, and go to state 15
    ','  shift, and go to state 101

    code_block  go to state 102


State 101

   21 statement: FOR IDENTIFIER '=' NUMBER ',' NUMBER ',' . NUMBER code_block

    NUMBER  shift, and go to state 103


State 102

   20 statement: FOR IDENTIFIER '=' NUMBER ',' NUMBER code_block .

    $default  reduce using rule 20 (statement)


State 103

   21 statement: FOR IDENTIFIER '=' NUMBER ',' NUMBER ',' NUMBER . code_block

    '{'  shift, and go to state 15

    code_block  go to state 104


State 104

   21 statement: FOR IDENTIFIER '=' NUMBER ',' NUMBER ',' NUMBER code_block .

    $default  reduce using rule 21 (statement)
